# StepValidation

./: CMakeLists.txt  CMakeLists.txt.user.ac3aea6  README.md  package.xml
config/: footsteps_talos.yaml  step_interpolation.yaml
include/: FootWiggle.h  Footstep6D.h  StepInterpolation.h  StepValidation.h  planner_utils.h
launch/: interpolate_step.launch  step_expansion.launch  step_validation.launch
msg/: polygonArray.msg
src/: FootWiggle.cpp  Footstep6D.cpp  ObstacleMap.cpp  StepInterpolation.cpp  StepValidation.cpp  planner_utils.cpp  step_expansion_node.cpp  step_interpolation_node.cpp  step_validation_node.cpp
