<?xml version="1.0"?>
<package format="2">
  <name>static_step_validation</name>
  <version>0.0.0</version>
  <description>The static_step_validation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="pal@todo.todo">pal</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

     <buildtool_depend>catkin</buildtool_depend>
     <build_depend>message_generation</build_depend>
     <depend>math_utils</depend>
     <depend>pal_ros_utils</depend>
     <exec_depend>message_runtime</exec_depend>
     <depend>pal_locomotion</depend>
     <depend>roscpp</depend>

     <build_depend>cmake_modules</build_depend>

     <depend>grid_map_core</depend>
     <depend>grid_map_ros</depend>
     <depend>grid_map_msgs</depend>
     <depend>std_msgs</depend>
     <depend>message_filters</depend>
     <depend>custom_planner_msgs</depend>




  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
